[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/sprite sheet.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://HealthUnit.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sound effects/blaster-2-81267.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 12 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.08 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "running"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 6, 7, 8 ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 464, 312 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 4.71239
texture = ExtResource( 1 )
hframes = 5
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, 0 )
rotation = -1.5708
shape = SubResource( 1 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( 20.611, 8 )

[node name="HealthUnit" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/running = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="died" from="." to="." method="_on_Player_died"]
[connection signal="take_damage" from="HealthUnit" to="." method="_on_HealthUnit_take_damage"]
